--- a/package.json
+++ b/package.json
@@ -2,25 +2,45 @@
   "name": "nuxt-admin-template",
   "type": "module",
   "scripts": {
-    "dev": "nuxt dev",
+    "dev": "cross-env APP_ENV=dev nuxt dev",
     "build": "nuxt build",
     "preview": "nuxt preview",
     "prepare": "panda codegen"
   },
   "dependencies": {
+    "@mikro-orm/core": "^6.4.16",
+    "@mikro-orm/mysql": "^6.4.16",
+    "@mikro-orm/seeder": "^6.4.16",
+    "@napi-rs/canvas": "^0.1.73",
+    "@node-rs/bcrypt": "^1.10.7",
+    "@node-rs/jsonwebtoken": "^0.5.9",
     "awilix": "^12.0.5",
     "awilix-manager": "^6.1.0",
+    "c12": "^3.0.4",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.10.3",
     "enum-plus": "^2.4.2",
     "es-toolkit": "^1.39.7",
+    "ioredis": "^5.6.1",
+    "ms": "^2.1.3",
+    "nanoid": "^5.1.5",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "plus-pro-components": "^0.1.25",
     "ts-pattern": "^5.7.1",
-    "vue-types": "^6.0.0"
+    "uuid": "^11.1.0",
+    "vue-types": "^6.0.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "yoctocolors": "^2.1.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@element-plus/nuxt": "^1.1.3",
     "@nuxt/eslint": "^1.5.2",
     "@pandacss/dev": "0.53.7",
+    "@types/ms": "^2.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.30.1",
     "nuxt": "^4.0.0-rc.0",
     "typescript": "^5.8.3",
