--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "cross-env APP_ENV=dev nuxt dev",
     "build": "nuxt build",
     "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
     "prepare": "panda codegen"
   },
   "dependencies": {
@@ -24,11 +25,14 @@
     "ioredis": "^5.6.1",
     "ms": "^2.1.3",
     "nanoid": "^5.1.5",
+    "nuxt": "^4.0.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "plus-pro-components": "^0.1.25",
     "ts-pattern": "^5.7.1",
     "uuid": "^11.1.0",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1",
     "vue-types": "^6.0.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
@@ -39,11 +43,10 @@
     "@element-plus/nuxt": "^1.1.4",
     "@nuxt/eslint": "^1.5.2",
     "@pandacss/dev": "0.54.0",
+    "@pinia/nuxt": "^0.11.1",
     "@types/ms": "^2.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.31.0",
-    "nuxt": "^4.0.0-rc.0",
-    "typescript": "^5.8.3",
     "vue-types-nuxt": "^3.0.0"
   }
 }
