--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@napi-rs/canvas": "^0.1.73",
     "@node-rs/bcrypt": "^1.10.7",
     "@node-rs/jsonwebtoken": "^0.5.9",
+    "@vueuse/core": "^13.5.0",
     "awilix": "^12.0.5",
     "awilix-manager": "^6.1.0",
     "c12": "^3.1.0",
@@ -45,6 +46,7 @@
     "@pandacss/dev": "0.54.0",
     "@pinia/nuxt": "^0.11.1",
     "@types/ms": "^2.1.0",
+    "@vueuse/nuxt": "^13.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.31.0",
     "vue-types-nuxt": "^3.0.0"
