--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,29 @@
-node_modules
-.nuxt
+# Nuxt dev/build outputs
 .output
-.DS_Store
-logs
+.data
+.nuxt
+.nitro
+.cache
+dist
 
+# Node dependencies
+node_modules
+
+# Logs
+logs
+*.log
+
+# Misc
+.DS_Store
+.fleet
+.idea
+
+# Local env files
+.env
+.env.*
+!.env.example
+
+# Lock files
 pnpm-lock.yaml
 package-lock.json
 
