--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@antfu/eslint-config": "^4.17.0",
     "@element-plus/nuxt": "^1.1.4",
     "@nuxt/eslint": "^1.5.2",
+    "@nuxtjs/i18n": "^10.0.0",
     "@pandacss/dev": "0.54.0",
     "@pinia/nuxt": "^0.11.1",
     "@types/ms": "^2.1.0",
