--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../.nuxt/tsconfig.server.json",
+  "extends": "../.nuxt/tsconfig.shared.json",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
