--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuxt-admin-template",
   "type": "module",
   "scripts": {
-    "dev": "cross-env APP_ENV=dev nuxt dev",
+    "dev": "nuxt dev",
     "build": "nuxt build",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -13,12 +13,15 @@
     "@mikro-orm/mysql": "^6.4.16",
     "@mikro-orm/seeder": "^6.4.16",
     "@napi-rs/canvas": "^0.1.74",
+    "@nestjs/common": "^11.1.5",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.5",
     "@node-rs/bcrypt": "^1.10.7",
     "@node-rs/jsonwebtoken": "^0.5.9",
     "@vueuse/core": "^13.5.0",
-    "awilix": "^12.0.5",
-    "awilix-manager": "^6.1.0",
     "c12": "^3.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dayjs": "^1.11.13",
     "element-plus": "^2.10.4",
     "enum-plus": "^2.4.2",
@@ -26,7 +29,7 @@
     "ioredis": "^5.6.1",
     "ms": "^2.1.3",
     "nanoid": "^5.1.5",
-    "nuxt": "^4.0.0",
+    "nuxt": "^4.0.1",
     "pinia": "^3.0.3",
     "plus-pro-components": "^0.1.26",
     "ts-pattern": "^5.7.1",
@@ -35,20 +38,21 @@
     "vue-types": "^6.0.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "yoctocolors": "^2.1.1",
-    "zod": "^4.0.5"
+    "yoctocolors": "^2.1.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.17.0",
     "@element-plus/nuxt": "^1.1.4",
-    "@nuxt/eslint": "^1.6.0",
-    "@nuxtjs/i18n": "^10.0.0",
+    "@nuxt/eslint": "^1.7.0",
+    "@nuxtjs/i18n": "^10.0.1",
+    "@oxc-project/runtime": "^0.77.3",
     "@pandacss/dev": "0.54.0",
     "@pinia/nuxt": "^0.11.2",
     "@types/ms": "^2.1.0",
     "@vueuse/nuxt": "^13.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.31.0",
+    "unplugin-oxc": "^0.4.7",
     "vue-types-nuxt": "^3.0.0"
   }
 }
