--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dayjs": "^1.11.13",
     "element-plus": "^2.10.4",
     "enum-plus": "^2.4.2",
-    "es-toolkit": "^1.39.7",
+    "es-toolkit": "^1.39.8",
     "ioredis": "^5.6.1",
     "ms": "^2.1.3",
     "nanoid": "^5.1.5",
@@ -42,18 +42,21 @@
     "yoctocolors": "^2.1.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.18.0",
+    "@antfu/eslint-config": "^5.0.0",
     "@element-plus/nuxt": "^1.1.4",
-    "@nuxt/eslint": "^1.7.0",
-    "@nuxtjs/i18n": "^10.0.2",
-    "@oxc-project/runtime": "^0.77.3",
+    "@nuxt/eslint": "^1.7.1",
+    "@nuxtjs/i18n": "^10.0.3",
+    "@oxc-project/runtime": "^0.78.0",
     "@pandacss/dev": "0.54.0",
     "@pinia/nuxt": "^0.11.2",
     "@types/ms": "^2.1.0",
     "@vueuse/nuxt": "^13.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.31.0",
-    "unplugin-oxc": "^0.4.7",
+    "unplugin-oxc": "^0.4.8",
     "vue-types-nuxt": "^3.0.0"
+  },
+  "overrides": {
+    "reflect-metadata": "npm:@abraham/reflection@0.13.0"
   }
 }
